# turtlebot4_mpc_simulation

./: .gitignore  .gitmodules  README.md
docker/: Dockerfile_ros2  Makefile  docker-compose.yaml  pre_start.sh  ros_entrypoint.sh
tb4_mpc_bringup/: CMakeLists.txt  README.md  package.xml
tb4_mpc_bringup/launch/: demo_depot_nav2.launch.py  full_sim.launch.py  navigation.launch.py
tb4_mpc_bringup/rviz/: depot_config.rviz
tb4_mpc_description/: CMakeLists.txt  README.md  package.xml
tb4_mpc_description/launch/: robot_description.launch.py
tb4_mpc_description/urdf/icreate/: caster.urdf.xacro  create3.urdf.xacro
tb4_mpc_description/urdf/sensors/: camera_bracket.urdf.xacro  oakd.urdf.xacro  rplidar.urdf.xacro
tb4_mpc_description/urdf/standard/: tower_sensor_plate.urdf.xacro  tower_standoff.urdf.xacro  turtlebot4.urdf.xacro  weight_block.urdf.xacro
tb4_mpc_nav/commander_app/: CMakeLists.txt  package.xml
tb4_mpc_nav/commander_app/launch/: commander_app.launch.py
tb4_mpc_nav/localization_server/: CMakeLists.txt  package.xml
tb4_mpc_nav/localization_server/launch/: localization_server.launch.py
tb4_mpc_nav/map_server/: CMakeLists.txt  package.xml
tb4_mpc_nav/path_planner_server/: CMakeLists.txt  package.xml
tb4_mpc_nav/path_planner_server/config/: controller.yaml  planner_server.yaml
tb4_mpc_nav/waypoint_follower/: CMakeLists.txt  package.xml
tb4_mpc_nav/waypoint_follower/launch/: waypoint_follower.launch.py
tb4_mpc_sim/: CMakeLists.txt  README.md  package.xml
tb4_mpc_sim/launch/: depot_tb4_standalone.launch.py  depot_world_tb4.launch.py  spawn_tb4.launch.py
