<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>path_planner_server</name>
  <version>0.1.0</version>
  <description>Turtlebot4 MPC Sim Navigation stack - Path planner server</description>
  <maintainer email="kuralme@protonmail.com">kuralme</maintainer>
  <license>MIT</license>

  <depend>rclcpp</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_bt_navigator</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
