<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>waypoint_follower</name>
  <version>0.1.0</version>
  <description>Turtlebot4 MPC Sim Navigation stack application - Waypoint follower</description>
  <maintainer email="kuralme@protonmail.com">kuralme</maintainer>
  <license>MIT</license>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_util</depend>
  <depend>rclpy</depend>

  <exec_depend>python3</exec_depend>
  <exec_depend>python3-colcon-common-extensions</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
